--- a/src/EnglishNow.Web/Views/Error/Index.cshtml
+++ b/src/EnglishNow.Web/Views/Error/Index.cshtml
@@ -1,13 +1,10 @@
 ﻿@using EnglishNow.Web.Models.Error
 @model ErrorViewModel
-@{
-    ViewData["Title"] = "Erro";
-}
-<h1>Ops, Ocorreu um erro inesperado</h1>
 
-<h2>Um erro ocorreu na tentativa de processar sua requisição,
-    tente novamente mais tarde ou entre em contato com o suporte
-</h2>
+<h1 class="text-danger">Ops, ocorreu um erro inesperado</h1>
+
+<h2 class="text-danger">Um erro ocorreu na tentativa de processar sua requisição. Tente novamente mais tarde ou entre em contato com o suporte.</h2>
+
 <p>
     Detalhes do erro: <code>@Model.MensagemErro</code>
 </p>
