Criação do mecanismo de login

--- a/src/EnglishNow.Web/Views/Home/Index.cshtml
+++ b/src/EnglishNow.Web/Views/Home/Index.cshtml
@@ -2,4 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<p>Olá mundo</p>
+<div class="text-center">
+    <h1 class="display-4"><b>Bem Vindo</b></h1>
+    <p>Esse é o portal da escola <b>English Now</b></p>
+</div>
